
	*ImportDatabase.php: Added require for $IP/maintenance/commandLine.inc.
	*ImportDatabase.php: Fixed array references to $argv. It does not seem to be complying with PHP documentation.
	*ImportDatabase.php: Reduced number of server arguments.
	*ImportDatabase.php: Changed all database queries to use Database class.

	Fixed identical bugs that were fixed in database dump script found in database import script.

	*ImportDatabase.php: Changed configuration variable check to use ternary operators in order to simplify code.
	*ImportDatabase.php: Changed popen to proc_open (that was how it was supposed to be), and put working directory into proc_open() instead of using chdir().
	*ImportDatabase.php: Added missing quotation marks around 'r' in the $descriptorspec array.
	*ImportDatabase.php: Added an end of file check to the while loop as a sanity check if fgets returns false unexpectedly for some reason.
	*ImportDatabase.php: Changed queried field from lastbackup to user_lastbackup.

	Made backupId variable names consistent in main script.

	*WikiBackup_body.php (SpecialBackup.executeBackup): Changed variable name of $jobid to $backupId.

	Changed WikiBackup class to where execute, import, and delete functions use internal variable and user object.

	*WikiBackup_body.php (SpecialBackup.executeBackup,importBackup,deleteBackup): Removed backupId parameter given to WikiBackup::execute,import,delete.
	*WikiBackup_body.php (SpecialBackup.executeBackup,importBackup,deleteBackup): Added $wgUser as a parameter to the WikiBackup class constructor.

	*WikiBackup_body.php (WikiBackup.__construct): Added $user parameter and added validity check for user parameter.
	*WikiBackup_body.php (WikiBackup.__construct): Used 'last' SQL function to find last job id instead of time consuming previous method.
	*WikiBackup_body.php (WikiBackup.execute,import,delete): Removed function parameters and put user and backup id variables in context of the object.